prometheus/prometheus-stateful-set.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  name: prometheus-server
spec:
  replicas: 1
  serviceName: prometheus-server-service
  selector:
    matchLabels:
      app: prometheus-server
  template:
    metadata:
      labels:
        app: prometheus-server
    spec:
      serviceAccountName: prometheus-server
      containers:
        - name: prometheus
          image: prom/prometheus
          args:
            - --config.file=/etc/prometheus/prometheus.yaml
            - --storage.tsdb.path=/data
            - --web.console.libraries=/etc/prometheus/console_libraries
            - --web.console.templates=/etc/prometheus/consoles
            - --web.enable-lifecycle
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /-/ready
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          livenessProbe:
            httpGet:
              path: /-/healthy
              port: 9090
            initialDelaySeconds: 30
            timeoutSeconds: 30
          volumeMounts:
            - name: prometheus-config-volume
              mountPath: /etc/prometheus/
            - name: prometheus-storage-volume
              mountPath: /data
              subPath: ""
      volumes:
        - name: prometheus-config-volume
          configMap:
            name: prometheus-configuration
        #- name: prometheus-storage-volume
        #  emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: prometheus-storage-volume
      labels:
        app: prometheus-server
    spec:
      storageClassName: do-block-storage
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: "5Gi"
