prometheus/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server-service
spec:
  #type: NodePort
  ports:
    - port: 9090
      targetPort: 9090
  selector:
    app: prometheus-server
