prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:  
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-cluster-issuer" # <--- Comment this line out if you're not using cert-manager
spec:
  tls:
  - hosts:
    - prom.ostrike.com
    secretName: promcert # <--- Comment this line out if you're not using cert-manager
  rules:
  - host: prom.ostrike.com
    http:
      paths:
      - backend:
          serviceName: prometheus-server-service
          servicePort: 9090
